--- a/client/wxapp/components/home/home.wxss
+++ b/client/wxapp/components/home/home.wxss
@@ -292,8 +292,13 @@
   height: 100%;
 }
 .modal .modalView {
-  position: relative;
-  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 40rpx;
+  right: 40rpx;
+  margin: auto;
+  /* width: 100%; */
   max-height: 100%;
   overflow: hidden;
   background-color: #fff;
@@ -629,3 +634,6 @@
   margin-right: 20rpx;
 }
 /* 购物车列表 end */
+
+.button{background: none;width: 56rpx;height: 56rpx;position: absolute;top: 0;left: 0;opacity: 0;}
+.button::after{border:none;}
