--- a/client/wxapp/pages/receiveAddress/receiveAddress.wxss
+++ b/client/wxapp/pages/receiveAddress/receiveAddress.wxss
@@ -48,7 +48,10 @@ page{width: 100%;height: 100%;}
 .listBox .listBoxScroll{height: 100%;width: 100%;}
 .listBox .listBoxScroll .box{height: 100%;padding-top: 76rpx;box-sizing: border-box;}
 .listBox .listBoxScroll .listItem {padding: 0 60rpx 0 30rpx;background-color: #ffffff;margin-bottom: 35rpx;}
+.listBox .listBoxScroll .listItem::before{content: '';width: 100%;height: 2rpx;background-color: #fff;position: absolute;bottom: 0;left: 0;}
 .listBox .listBoxScroll .listItem .left{width: 627rpx;height: 100%; box-sizing: border-box;padding: 30rpx 0;font-size: 30rpx;}
 .listBox .listBoxScroll .listItem .left .txt:first-child{margin-bottom: 15rpx;}
 .listBox .listBoxScroll .listItem .left .txt text:last-child{margin-left: 15rpx;}
 .listBox .listBoxScroll .listItem .right{font-size: 26rpx;}
+.listBox .rightDel{height: 100%;width: 100rpx;display: flex;justify-content: center;align-items: center; background-color: #ee0a24;color: #fff;font-size: 30rpx;}
+.listBox .rightDel::before{content: '';width: 100%;height: 2rpx;background-color: #fff;position: absolute;bottom: 0;left: 0;}
