--- a/client/wxapp/components/home/home.wxss
+++ b/client/wxapp/components/home/home.wxss
@@ -1,6 +1,8 @@
-
-@import '../../app.wxss';
-.conBox{width: 100%;height: 100%;}
+@import "../../app.wxss";
+.conBox {
+  width: 100%;
+  height: 100%;
+}
 .home {
   width: 100%;
   height: 100%;
@@ -186,7 +188,8 @@
 
 .dishList .categoryList .categoryItem text {
   color: #9a9a9a;
-  font-size: 28rpx;
+  font-size: 24rpx;
+  line-height: 32rpx;
   vertical-align: middle;
   letter-spacing: 4rpx;
 }
@@ -224,7 +227,6 @@
   width: 180rpx;
   height: 270rpx;
   text-align: center;
-  line-height: 270rpx;
 }
 
 .dishList .detailsList .dishMenuItem .img image {
@@ -416,7 +418,7 @@
   color: #9d9d9d;
 }
 .modal .modalView .scrollView .configMenu {
-  margin-bottom: 50rpx;
+  margin-bottom: 30rpx;
 }
 .modal .modalView .scrollView .configMenu .configTitle {
   margin-bottom: 24rpx;
@@ -430,7 +432,8 @@
   background-color: #f5f5f6;
   color: #000;
   font-size: 22rpx;
-  margin-right: 35rpx;
+  margin-right: 20rpx;
+  margin-bottom: 20rpx;
 }
 .modal .modalView .scrollView .configMenu .selectConfigCard.select {
   background-color: #d3aa79;
@@ -497,7 +500,9 @@
   color: #e8d4bb;
 }
 .modal .modalView .cofigFooter .priceDetail .addNum .addNumText {
-  margin: 0 24rpx;
+  width: 68rpx;
+  display: inline-block;
+  text-align: center;
   color: #8c8c8c;
 }
 .modal .modalView .cofigFooter .addCar {
@@ -636,5 +641,15 @@
 }
 /* 购物车列表 end */
 
-.button{background: none;width: 56rpx;height: 56rpx;position: absolute;top: 0;left: 0;opacity: 0;}
-.button::after{border:none;}
+.button {
+  background: none;
+  width: 56rpx;
+  height: 56rpx;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.button::after {
+  border: none;
+}
