--- a/client/wxapp/pages/index/index.wxss
+++ b/client/wxapp/pages/index/index.wxss
@@ -1,58 +1,55 @@
 /**标准16:9*/
-.content{width: 100%;height: 100%;}
-.module{top:0; bottom: 0;position: absolute;left: 0;width: 100%;height: calc(100% - 104rpx);}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.content {
+  width: 100%;
+  height: 100%;
+}
+.module {
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: calc(100% - 122rpx);
+}
 
 /**
    css media 适配
 */
 /** iphone系列 */
-@media screen and (width:320px), screen and (width:375px), screen and (width:414px) {
-    .cssMedia {
-    
-    }
+@media screen and (width: 320px),
+  screen and (width: 375px),
+  screen and (width: 414px) {
+  .cssMedia {
+  }
 }
 
 /** 安卓系列 */
-@media screen and (width:360px), screen and (width:393px) {
-    .cssMedia {
-    
-    }
+@media screen and (width: 360px), screen and (width: 393px) {
+  .cssMedia {
+  }
 }
 
 /** 安卓 15:9 */
-@media screen and (width:360px) and (max-height:540px) {
-    .cssMedia {
-    
-    }
+@media screen and (width: 360px) and (max-height: 540px) {
+  .cssMedia {
+  }
 }
 
 /** 安卓 18:9 */
-@media screen and (width:360px) and (min-height:600px), screen and (width:412px) and (min-height:680px), screen and (width:393px) {
-    .cssMedia {
-     
-     }
- }
- 
- /** iphoneX */
- @media screen and (width:375px) and (min-height:724px), screen and (width:414px) and (min-height:808px) {
-     .cssMedia {
-     
-     }
+@media screen and (width: 360px) and (min-height: 600px),
+  screen and (width: 412px) and (min-height: 680px),
+  screen and (width: 393px) {
+  .cssMedia {
+  }
+}
 
-     .module{height: calc(100% - 166rpx);}
- }
- 
+/** iphoneX */
+@media screen and (width: 375px) and (min-height: 724px),
+  screen and (width: 414px) and (min-height: 808px) {
+  .cssMedia {
+  }
+
+  .module {
+    height: calc(100% - 166rpx);
+  }
+}
