--- a/client/wxapp/pages/orderSettle/orderSettle.wxss
+++ b/client/wxapp/pages/orderSettle/orderSettle.wxss
@@ -11,7 +11,7 @@ page { height: 100%; background-color: #f7f7f7;}
 /* 门店信息 start */
 .orderInfoScroll .box .guide.fullPageInfo {height: 100%;}
 .orderInfoScroll .box .guide .guideTop {display: flex;justify-content: space-between;align-items: center;padding-bottom: 15rpx;}
-.orderInfoScroll .box .guide .guideTop .guideTopLeft {display: flex;align-items: center;}
+.orderInfoScroll .box .guide .guideTop .guideTopLeft {/*display: flex;*/align-items: center;}
 .orderInfoScroll .box .guide .guideTop .guideTopLeft .iconfont {margin-right: 16rpx;font-size: 26rpx;}
 .orderInfoScroll .box .guide .guideTop .guideTopLeft .storeName {font-size: 30rpx;font-weight: 700;margin-right: 10rpx;}
 .orderInfoScroll .box .guide .guideTop .guideTopRight {font-size: 24rpx;}
