--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxml
@@ -2,7 +2,8 @@
 <view class="article">
 	<scroll-view scroll-y class="orderInfoScroll">
 		<view class="box">
-			<view class="orderRedaus">
+		  <view class="orderRedaus"  wx:if="{{appData.payOrder}}">支付成功 取餐码 : 99999</view>
+			<view class="orderRedaus" wx:else>
         <view>待支付</view>
         <view><van-count-down time="{{ time }}"  bind:finish="finished"/>后订单将自动取消</view>
         <view class="btnBox">
@@ -17,7 +18,7 @@
 				<view class="listContent">
 					<view class="left flexBox">
 						<view wx:for="{{cardList}}" wx:key="index" class="cardDetailListCard">
-							<image class="img" src="{{item.imgUrl}}" mode="widthFix"></image>
+							<image class="img" src="{{item.foodCover}}" mode="widthFix"></image>
 						</view>
 					</view>
 					<view class="right" catchtap="showCardListClick">
@@ -46,7 +47,7 @@
 					</view>
 				</view>
 				<view class="totalBox">共{{selectInfo.total}}件商品，小计
-					<text class="icon_money">￥{{selectInfo.totalPrice}}</text>
+					<text class="icon_money">￥{{selectInfo.allPrice}}</text>
 				</view>
 			</view>
 			<!-- 支付方式 -->
@@ -74,21 +75,21 @@
 			<view class="scrollList">
 				<scroll-view scroll-y class="popup_Scroll">
 					<view wx:for="{{cardList}}" wx:key="index" class="cardDetailListCard">
-						<view class="cardDetailListCardLeft">
-							<image class="img" src="{{item.imgUrl}}" mode="widthFix"></image>
-						</view>
-						<view class="cardDetailListCardRight">
-							<view class="left">
-								<view>{{item.name}}</view>
-								<view>{{item.unit}}</view>
-							</view>
-							<view class="right">
-								<text>￥{{item.price}}</text>
-								<view></view>
-								<text>数量: {{item.num}}</text>
-							</view>
-						</view>
-					</view>
+            <view class="cardDetailListCardLeft">
+              <image class="img" src="{{item.foodCover}}" mode="widthFix"></image>
+            </view>
+            <view class="cardDetailListCardRight">
+              <view class="left">
+                <view>{{item.foodTitle}}</view>
+                <view>{{item.selectText}}</view>
+              </view>
+              <view class="right">
+                <text>￥{{item.realPerPrice}}</text>
+                <view></view>
+                <text>数量: {{item.buyNum}}</text>
+              </view>
+            </view>
+          </view>
 				</scroll-view>
 			</view>
 		</view>
