提交:添加订单列表获取

--- a/client/wxapp/components/order/order.wxss
+++ b/client/wxapp/components/order/order.wxss
@@ -3,7 +3,7 @@
 .topBabs .van-hairline--top-bottom:after {border-top: none;}
 .listBox .flexBox{display: flex;justify-content: space-between;align-items: center;}
 .listBox {height: 100%;overflow: hidden;}
-.listBox .listBoxscroll{height: 600px;}
+.listBox .listBoxscroll{height: 500px;}
 .listBox .listItem{width: 100%;background-color: #fff;min-height: 430rpx;margin-top: 20rpx;box-sizing: border-box;padding: 36rpx 45rpx 40rpx 40rpx;}
 .listBox .listItem .top {font-size: 28rpx}
 .listBox .listItem .top .orderStatus{color:#3d3d3d;font-size: 24rpx;}
@@ -14,3 +14,49 @@
 .listBox .listItem .bottom .num{margin-bottom: 10rpx;}
 .listBox .listItem .bottom .totalPrize{color: #000;font-weight: 700;}
 .listBox .listItem .buttonBox .btn{font-size: 24rpx;width: 146rpx;height: 56rpx;margin-top: 36rpx;border: 2px solid #d2ad7d;text-align: center;color: #d2ad7d;line-height: 56rpx;}
+
+.noData{color: #000;font-size: 30rpx;text-align: center;position: absolute;top: 50%;left: 50%;transform: translate(-50%,0);}
+
+
+/**
+   css media 适配
+*/
+
+/** iphone系列 */
+
+@media screen and (width:320px), screen and (width:375px), screen and (width:414px) {
+  .cssMedia {
+  }
+}
+
+/** 安卓系列 */
+
+@media screen and (width:360px), screen and (width:393px) {
+  .cssMedia {
+  }
+}
+
+/** 安卓 15:9 */
+
+@media screen and (width:360px) and (max-height:540px) {
+  .cssMedia {
+  }
+}
+
+/** 安卓 18:9 */
+
+@media screen and (width:360px) and (min-height:600px),
+       screen and (width:412px) and (min-height:680px),
+       screen and (width:393px) {
+  .cssMedia {
+  }
+}
+
+/** iphoneX */
+
+@media screen and (width:375px) and (min-height:724px),
+       screen and (width:414px) and (min-height:808px) {
+  .cssMedia {
+  }
+  .listBox .listBoxscroll{height: 800px;}
+}
