--- a/client/wxapp/pages/shops/shops.wxml
+++ b/client/wxapp/pages/shops/shops.wxml
@@ -13,101 +13,51 @@
 					</view>
 				</view>
 				<view class='mapBox'>
-					<map
-					 id="map"
-					 latitude="{{centerLatitude}}"
-					 longitude="{{centerLongitude}}"
-					 scale="{{scale}}"
-					 markers="{{markers}}"
-					 bindmarkertap="markertap"
-					 show-location
-					 style="width: 100%; height: 250px;"
-					/>
+					<map id="map" latitude="{{centerLatitude}}" longitude="{{centerLongitude}}" scale="{{scale}}" markers="{{markers}}" bindmarkertap="markertap" show-location style="width: 100%; height: 250px;" />
 				</view>
 				<view class='storeBox'>
-					<scroll-view
-					 scroll-y
-					 scroll-top="{{scrollTop}}"
-					 scroll-into-view='{{toView}}'
-					 scroll-with-animation="{{false}}"
-					>
-						<view
-						 class='item'
-						 wx:for="{{markers}}"
-						 wx:key="id"
-						 id='mark-{{item.id}}'
-						>
+					<scroll-view scroll-y scroll-top="{{scrollTop}}" scroll-into-view='{{toView}}' scroll-with-animation="{{false}}">
+						<view class='item' wx:for="{{markers}}" wx:key="id" id='mark-{{item.id}}'>
 							<view class='left' bindtap='markertap' id='{{item.id}}'>
 								<view class='con'>
-									<view class='item-title'>{{item.name}}</view>
+									<view class='item-title'>{{item.shopname}}</view>
 									<view class='item-distance'>距离您{{item.distance}}km</view>
 									<view class='item-adress'>{{item.address}}</view>
-									<view class='item-time'>{{item.time}}</view>
+									<view class='item-time'>{{item.beginTime }} ~ {{item.endTime}}</view>
 								</view>
 							</view>
-							<view class='right' bindtap='viewStore' id='{{item.id}}'>去看看</view>
+							<view class='right' bindtap='viewStore' id='{{item.id}}' data-item="{{item}}">去看看</view>
 						</view>
 					</scroll-view>
 				</view>
 			</view>
 		</van-tab>
 		<van-tab title="常用/收藏" class="vanTab">
-      <view class="collect storeBox">
-					<scroll-view
-					 scroll-y
-					 scroll-top="{{scrollTop}}"
-					 scroll-into-view='{{toView}}'
-					 scroll-with-animation="{{false}}"
-					>
-						<view
-						 class='item'
-						 wx:for="{{markers}}"
-						 wx:key="id"
-						 id='mark-{{item.id}}'
-						>
-							<view class='left' bindtap='markertap' id='{{item.id}}'>
-								<view class='con'>
-									<view class='item-title'>{{item.name}}</view>
-									<view class='item-distance'>距离您{{item.distance}}km</view>
-									<view class='item-adress'>{{item.address}}</view>
-									<view class='item-time'>{{item.time}}</view>
-								</view>
+			<view class="collect storeBox">
+				<scroll-view scroll-y scroll-top="{{scrollTop}}" scroll-into-view='{{toView}}' scroll-with-animation="{{false}}">
+					<view class='item' wx:for="{{collectData}}" wx:key="id" id='mark-{{item.id}}'>
+						<view class='left' bindtap='markertap' id='{{item.id}}'>
+							<view class='con'>
+								<view class='item-title'>{{item.shopname}}</view>
+								<view class='item-distance'>距离您{{item.distance}}km</view>
+								<view class='item-adress'>{{item.address}}</view>
+								<view class='item-time'>{{item.beginTime }} ~ {{item.endTime}}</view>
 							</view>
-							<view class='right' bindtap='viewStore' id='{{item.id}}'>去看看</view>
 						</view>
-					</scroll-view>
-				</view>
-    </van-tab>
+						<view class='right' bindtap='viewStore' id='{{item.id}}'>去看看</view>
+					</view>
+					<view class="noData" wx:if="{{collectData.length == 0}}">暂无数据</view>
+				</scroll-view>
+			</view>
+		</van-tab>
 	</van-tabs>
 
 	<!-- 弹出层 -->
 	<view class='popupCon'>
-		<van-popup
-		 show="{{ show }}"
-		 position="right"
-		 overlay="{{ true }}"
-		 bind:close="onClose"
-		 class="popupBox"
-		>
-			<van-search
-			 value="{{ searchValue }}"
-			 placeholder="请输入搜索关键词"
-			 show-action
-			 bind:change="onChange"
-			 bind:search="onSearch"
-			 bind:cancel="onCancel"
-			 focus="{{true}}"
-			/>
+		<van-popup show="{{ show }}" position="right" overlay="{{ true }}" bind:close="onClose" class="popupBox">
+			<van-search value="{{ searchValue }}" placeholder="请输入搜索关键词" show-action bind:change="onChange" bind:search="onSearch" bind:cancel="onCancel" focus="{{true}}" />
 			<view class='resultBox'>
-				<view
-				 class='item'
-				 hidden='{{resultArr.length == 0}}'
-				 wx:for="{{resultArr}}"
-				 wx:key="index"
-				 id='{{item.area_id}}'
-				 bindtap='itemClick'
-				 data-name="{{item.name}}"
-				>
+				<view class='item' hidden='{{resultArr.length == 0}}' wx:for="{{resultArr}}" wx:key="index" id='{{item.area_id}}' bindtap='itemClick' data-name="{{item.name}}">
 					<view class='title'>{{item.name}} • {{item.province}}</view>
 					<view class='adress'>{{item.address}}</view>
 				</view>
@@ -118,4 +68,3 @@
 	<!----section end----->
 </view>
 <!----article end----->
-
