--- a/client/wxapp/pages/shops/shops.wxss
+++ b/client/wxapp/pages/shops/shops.wxss
@@ -59,6 +59,7 @@
 .storeBox {
   height: calc(100% - 608rpx);
   padding: 22rpx 32rpx;
+  margin-top: 35rpx;
 }
 
 .storeBox scroll-view {
@@ -146,6 +147,29 @@
  height: calc(100% - 88rpx);
  background-color: #f5f5f6;
 }
+
+.noData{
+  color: #000;
+  font-size: 30rpx;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /**
    css media 适配
