--- a/client/wxapp/components/order/order.wxss
+++ b/client/wxapp/components/order/order.wxss
@@ -3,9 +3,11 @@
 .topBabs .van-hairline--top-bottom:after {border-top: none;}
 .listBox .flexBox{display: flex;justify-content: space-between;align-items: center;}
 .listBox {height: 100%;overflow: hidden;}
-.listBox .listBoxscroll{height: 500px;}
+.listBox .listBoxscroll{height: 100%;}
 .listBox .listItem{width: 100%;background-color: #fff;min-height: 430rpx;margin-top: 20rpx;box-sizing: border-box;padding: 36rpx 45rpx 40rpx 40rpx;}
 .listBox .listItem .top {font-size: 28rpx}
+.listBox .listItem .top .storeName {text-align: left;}
+.listBox .listItem .top .storeName .storeImg{width: 40rpx;height: 40rpx;vertical-align: middle;}
 .listBox .listItem .top .orderStatus{color:#3d3d3d;font-size: 24rpx;}
 .listBox .listItem .center .imgList{width: 100%;padding: 35rpx 0;overflow: hidden;white-space: nowrap;}
 .listBox .listItem .center .imgList .img{width: 120rpx;height: auto;margin-right: 20rpx;vertical-align: middle;}
@@ -13,7 +15,7 @@
 .listBox .listItem .bottom .tips{color: #d2ad7d;margin-bottom: 10rpx;}
 .listBox .listItem .bottom .num{margin-bottom: 10rpx;}
 .listBox .listItem .bottom .totalPrize{color: #000;font-weight: 700;}
-.listBox .listItem .buttonBox .btn{font-size: 24rpx;width: 146rpx;height: 56rpx;margin-top: 36rpx;border: 2px solid #d2ad7d;text-align: center;color: #d2ad7d;line-height: 56rpx;}
+.listBox .listItem .buttonBox .btn{font-size: 24rpx;width: 146rpx;height: 56rpx;margin-top: 36rpx;border: 1rpx solid #d2ad7d;text-align: center;color: #d2ad7d;line-height: 56rpx;}
 
 .noData{color: #000;font-size: 30rpx;text-align: center;position: absolute;top: 50%;left: 50%;transform: translate(-50%,0);}
 
