--- a/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
+++ b/client/wxapp/pages/orderSettleDetail/orderSettleDetail.wxss
@@ -3,10 +3,27 @@ page { height: 100%; background-color: #f7f7f7;}
 .article { width: 100%; height: 100%;overflow: hidden;}
 .orderInfoScroll .box .iconCommon{color: #a7a7a7;}
 /* orderInfoScroll */
-.orderInfoScroll{height: calc(100% - 145rpx);}
-.orderInfoScroll .box{background-color: #f7f7f7;}
+.orderInfoScroll{height: 100%;}
+.orderInfoScroll .box{background-color: #f7f7f7;height: 100%;}
 .orderInfoScroll .box .commonB{padding: 32rpx 33rpx 0 33rpx;background-color: #fefefe;margin-bottom: 23rpx;}
+.orderInfoScroll .box .commonB .typeSelect>view{line-height: 1.4;}
+.orderInfoScroll .box .commonB .typeSelect .title{color: #676767;}
+.orderInfoScroll .box .commonB .typeSelect .right{text-align: left;line-height: 1.4;}
 .orderInfoScroll .box .commonTitle{font-size: 30rpx;font-weight: 700;padding-bottom: 40rpx;}
+.orderInfoScroll .box .commonTitle .storeImg{width: 40rpx;height: 40rpx;vertical-align: middle;}
+
+/* orderRedaus */
+.orderRedaus{background-color: #fefefe;margin-bottom: 23rpx;padding-bottom: 23rpx;}
+.orderRedaus .orderStatusInfo{text-align: center;font-size: 30rpx;color: #d2aa79;padding: 30rpx;}
+.orderRedaus .countDownBox{text-align: center;}
+.orderRedaus .countDownBox .van-count-down{display: inline-block;margin-right: 10rpx;}
+.orderRedaus .btnBox{display:flex;justify-content: space-between;align-items: center;width: 100%;margin: 30rpx auto;padding: 0 200rpx;}
+.orderRedaus .btnBox .btn{font-size: 24rpx;width: 146rpx;height: 56rpx;margin-top: 36rpx;border: 1rpx solid #d2ad7d;text-align: center;color: #d2ad7d;line-height: 56rpx;}
+.orderRedaus .btnBox2 {justify-content: center;width: auto;}
+.orderRedaus .stepBox{font-size: 24rpx;}
+.orderRedaus .stepBox .desTxt{font-size: 24rpx;}
+.orderRedaus .stepBox .title{font-size: 28rpx;color: #676767;padding-left: 30rpx;}
+
 
 /* 取茶时间 */
 .orderInfoScroll .box .getFoodTimeBox {padding-bottom: 32rpx;display: none;}
@@ -25,8 +42,9 @@ page { height: 100%; background-color: #f7f7f7;}
 .orderInfoScroll .box .cardListBox .flexBox{ margin-bottom: 50rpx;font-size: 30rpx;}
 .orderInfoScroll .box .cardListBox .couponBox .tips{color: #cacaca;}
 /* totalBox */
-.totalBox{padding-bottom: 44rpx;font-size: 30rpx;color:#676767;text-align: right;}
-.totalBox .icon_money{font-weight: 700;color: #000;font-size: 35rpx;}
+.orderInfoScroll .box .cardListBox .totalBox{padding-bottom: 44rpx;font-size: 30rpx;color:#676767;text-align: right;}
+.orderInfoScroll .box .cardListBox .totalBox .icon_money{font-weight: 700;color: #000;font-size: 35rpx;}
+.orderInfoScroll .box .cardListBox .totalBox1{margin-bottom: 0;}
 
 /* cardDetailListCard */
 .orderInfoScroll .box .cardDetailListCard{width: 20%;margin-right: 35rpx;}
