提交:接口全部调取完成,接下来串整个逻辑

--- a/client/wxapp/components/home/home.wxml
+++ b/client/wxapp/components/home/home.wxml
@@ -1,3 +1,4 @@
+<import src="/pages/temp/temp.wxml" />
 <view class='conBox'>
   <view class="home">
     <!-- 门店信息 -->
@@ -166,4 +167,8 @@
       </block>
     </view>
   </view>
+
+  <!-- 打烊弹窗 -->
+  <closingTime id="closingTime"></closingTime>
 </view>
+<template is="closingTime" data="{{closingTimeDiolag,shopInfo}}"></template>
