--- a/client/wxapp/common/css/common.wxss
+++ b/client/wxapp/common/css/common.wxss
@@ -177,6 +177,28 @@ button.button-hover {background-color: transparent;}
   content:'\e603';
 }
 
+/* commonDiolag */
+.commonDiolag{background-color: rgba(0,0,0,0.2);width: 100%;height: 100%;position: absolute;top: 0;left: 0;z-index: 99;}
+/* closingTime*/
+.closingTime .bottomBox{width: 100%;height: 415rpx;background-color: #fff;position: absolute;left: 0;bottom: 0;}
+.closingTime .bottomBox .logo{width: 247rpx;height: 208rpx;position: absolute;top: -150rpx;left: 30rpx;}
+.closingTime .bottomBox .txt{text-align: center;width: 100%;position: absolute;left: 0;}
+.closingTime .bottomBox .txt1{top: 130rpx;color: #343434;font-size: 41.86rpx;}
+.closingTime .bottomBox .txt2{top: 185rpx;color: #7d7d7d;font-size: 25.55rpx;}
+.closingTime.modal_showDiolg .bottomBox{animation: ani_closingTime 0.5s 0.2s linear both;}
+
+@keyframes ani_closingTime{
+  0%{ transform: translateY(600rpx);}
+  100%{ transform: translateY(0);}
+}
+
+
+
+
+
+
+
+
 
 
 
