--- a/client/wxapp/pages/orderSettle/orderSettle.wxss
+++ b/client/wxapp/pages/orderSettle/orderSettle.wxss
@@ -52,6 +52,10 @@ page { height: 100%; background-color: #f7f7f7;}
 .orderMoneyBox{height: 100rpx;background-color: #fefefe;border-top: 1px solid #f1f1f1;display: flex;justify-content: flex-end;align-items: center;}
 .orderMoneyBox .totalBox{padding-bottom: 0;}
 .orderMoneyBox .btnPayment{width: 240rpx;height: 100%;line-height: 100rpx;background-color: #d2aa79;text-align: center;color: #fff;margin-left: 40rpx;}
+.isOrderBox {background-color: #000;position: absolute;bottom: 0;left: 0;width: 100%;}
+.isOrderBox  .btnPayment{background-color: #000;}
+.isOrderBox .totalBox .icon_money{color: #fff;}
+
 
 /* 支付方式 */
 .orderInfoScroll .box .paymentTypeBox{padding: 32rpx 33rpx;font-size: 30rpx;}
