提交:串逻辑,添加订阅消息

--- a/client/wxapp/components/home/home.wxml
+++ b/client/wxapp/components/home/home.wxml
@@ -171,4 +171,4 @@
   <!-- 打烊弹窗 -->
   <closingTime id="closingTime"></closingTime>
 </view>
-<template is="closingTime" data="{{closingTimeDiolag,shopInfo}}"></template>
+<template is="closingTime" data="{{shopInfo}}"></template>
